--- a/ind.html
+++ b/ind.html
@@ -12,6 +12,7 @@
     <div class="sidebar sidebargo">
         <nav>
             <ul>
+                <li><a href="https://pulkitchauhan.me">Pulkit</a></li>
                 <li><a href="home.html" >Home</a></li>
                 <li><a href="intro.html" >My Intro</a></li>
                 <li><a href="services.html" >Services</a></li>
